--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-todo",
+  "proxy": "http://127.0.0.1:8000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.25",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.22.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.42.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
